--- a/layouts/index.html
+++ b/layouts/index.html
@@ -10,7 +10,7 @@
     {{ if isset .Site.Params "description" }}
         <h3>{{ .Site.Params.Description }}</h3>
     {{ end }}
-    <h2><a onclick="window.location.href='https://forms.gle/xZigq1DxXhQuEQZC9'">Call for Speakers</a></h2>
+    <h2><a href="https://forms.gle/xZigq1DxXhQuEQZC9">Call for Speakers</a></h2>
     <img class="png-inject" src="/images/call-for-speakers-iaml-verona.png" style="max-width: 10%;"/>
 </section>
 
